Grace/tests/gibbs/errors/t186.grace
// ERROR = P1031
method foo(a)bar(*) {
    print(a)
}
